Added logos for skills

--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@ I am currently pursuing Master of Science in Robotics at Northwestern University
 	<!-- //about-bottom -->
 	<!-- skills -->
 	<div class="agile-service w3ls-section" id="skills">
+
 		<div class="container">
 
 			<div class="col-md-12 skills-left">
@@ -162,7 +163,7 @@ I am currently pursuing Master of Science in Robotics at Northwestern University
                             <div class="col-sm-3 w3_tab_img_left">
                                 <div class="demo">
                                     <a href="sdg.html">
-                                        <figure class="imghvr-shutter-in-out-diag-2"><img src="images/dataset.png" alt=" " class="img-responsive" />
+                                        <figure class="imghvr-shutter-in-out-diag-2"><img src="images/merge_output.gif" alt=" " class="img-responsive" />
                                         </figure>
                                     </a>
                                 </div>
@@ -268,213 +269,104 @@ I am currently pursuing Master of Science in Robotics at Northwestern University
 		<div class="container">
 			<h3 class="agileits-title">Skills</h3>
 			<div class="bs-example bs-example-tabs" role="tabpanel" data-example-id="togglable-tabs">
+                <div class="agile-gallery-info">
+                <h5 class="agileits-title">Programming languages</h5>
 
-				<div id="myTabContent" class="tab-content">
-					<div role="tabpanel" class="tab-pane fade in active" id="home-main" aria-labelledby="home-tab">
-						<div class="w3_tab_img">
-							<div class="col-lg-4 col-sm-6  col-xs-12 w3_tab_img_left">
-                                <div class="agile-gallery-info">
-                                    <h5 class="agileits-title">Programming languages</h5>
+                </div>
 
-                                </div>
-								<div class="demo">
-									<a>
-										<figure class="imghvr-shutter-in-out-diag-2"><img height="10px" src="images/languages.png" alt=" " class="img-responsive" />
-										</figure>
-									</a>
-								</div>
+                <p><img height="70px"  style="padding-left:2em" src="images/logos/cpp.png" alt="alt text" title="C++">
+                <img height="70px"  style="padding-left:2em" src="images/logos/csharp.png" alt="alt text" title="C#">
+                <img height="70px"  style="padding-left:2em" src="images/logos/c.png" alt="alt text" title="C">
+                <img height="70px"  style="padding-left:2em" src="images/logos/python.png" alt="alt text" title="Python">
+                <img height="70px"  style="padding-left:2em" src="images/logos/vb.png" alt="alt text" title="VB.Net">
+                <img height="70px" style="padding-left:2em "  src="images/logos/angular.png" alt="alt text" title="Angular">
+                <img height="70px"  style="padding-left:2em" src="images/logos/ts.png" alt="alt text" title="Typescript">
+                <img height="70px"  style="padding-left:2em" src="images/logos/matlab.jpg" alt="alt text" title="Matlab">
+                </p>
 
-							</div>
-							<div class="col-lg-4 col-sm-6  col-xs-12 w3_tab_img_left">
-                                <div class="agile-gallery-info">
-                                    <h5>Libraries and Packages</h5>
-                                </div>
-								<div class="demo">
-									<a>
-										<figure class="imghvr-shutter-in-out-diag-2"><img src="images/libraries.png" alt=" " class="img-responsive" />
-										</figure>
-									</a>
-								</div>
+                <br>
 
-							</div>
-							<div class="col-lg-4 col-sm-6  col-xs-12 w3_tab_img_left">
-                                <div class="agile-gallery-info">
-                                    <h5>Design Software</h5>
-                                </div>
-								<div class="demo">
-									<a>
-										<figure class="imghvr-shutter-in-out-diag-2"><img src="images/design.png" alt=" " class="img-responsive" />
-										</figure>
-									</a>
-								</div>
+                <div class="agile-gallery-info">
+                <h5 class="agileits-title">Libraries and packages</h5>
 
-							</div>
-							<div class="col-lg-4 col-sm-6  col-xs-12 w3_tab_img_left">
-                                <div class="agile-gallery-info">
-                                    <h5>Version Control</h5>
-                                </div>
-								<div class="demo">
-									<a>
-										<figure class="imghvr-shutter-in-out-diag-2"><img src="images/version.png" alt=" " class="img-responsive" />
-										</figure>
-									</a>
-								</div>
+                </div>
 
-							</div>
-							<div class="col-lg-4 col-sm-6  col-xs-12 w3_tab_img_left">
-                                <div class="agile-gallery-info">
-                                    <h5>IDE</h5>
-                                </div>
-								<div class="demo">
-									<a>
-										<figure class="imghvr-shutter-in-out-diag-2"><img src="images/IDE.png" alt=" " class="img-responsive" />
-										</figure>
-									</a>
-								</div>
+                <p>
+                <img height="70px" style="padding-left:2em" src="images/logos/opencv.png" alt="alt text" title="OpenCV">
+                <img height="70px"  style="padding-left:2em" src="images/logos/gazebo.png" alt="alt text" title="Gazebo">
+                <img height="70px"  style="padding-left:2em" src="images/logos/tensorflow.png" alt="alt text" title="Tensorflow">
+                <img height="70px"  style="padding-left:2em" src="images/logos/pcl.png" alt="alt text" title="PCL">
+                <img height="70px"  style="padding-left:2em"  src="images/logos/ros.png" alt="alt text" title="Logo Title Text 1">
+                <img height="50px"  style="padding-left:2em" src="images/logos/rviz.png" alt="alt text" title="Rviz">
+                <img height="50px"  style="padding-left:2em" src="images/logos/open3D.png" alt="alt text" title="Open3D">
+                </p>
 
-							</div>
-							<div class="col-lg-4 col-sm-6  col-xs-12 w3_tab_img_left">
-                                <div class="agile-gallery-info">
-                                    <h5>Database</h5>
-                                </div>
-								<div class="demo">
-									<!-- <a class="cm-overlay" href="images/g6.jpg"> -->
-										<a>
-										<figure class="imghvr-shutter-in-out-diag-2"><img src="images/database.png" alt=" " class="img-responsive" />
-										</figure>
-									</a>
-								</div>
+                <br>
 
-							</div>
+                <div class="agile-gallery-info">
+                <h5 class="agileits-title">Design Software</h5>
+
+                </div>
+
+                <p>
+                <img height="70px" style="padding-left:2em" src="images/logos/catia.jpeg" alt="alt text" title="Catia">
+                <img height="90px"  style="padding-left:2em" src="images/logos/solidworks.jpg" alt="alt text" title="Solidworks">
+                <img height="70px"  style="padding-left:2em" src="images/logos/creo.png" alt="alt text" title="PTC Creo">
+                </p>
+
+                <br>
+
+                <div class="agile-gallery-info">
+                <h5 class="agileits-title">Version Control</h5>
+
+                </div>
+
+                <p>
 
 
-							<div class="clearfix"> </div>
-						</div>
-					</div>
-					<div role="tabpanel" class="tab-pane fade" id="learning" aria-labelledby="learning-tab">
-						<div class="w3_tab_img">
-							<div class="col-sm-4 w3_tab_img_left">
-								<div class="demo">
-									<a class="cm-overlay" href="images/g2.jpg">
-										<figure class="imghvr-shutter-in-out-diag-2"><img src="images/g2.jpg" alt=" " class="img-responsive">
-										</figure>
-									</a>
-								</div>
-								<div class="agile-gallery-info">
-									<h5>My project</h5>
-									<p>Eleifend</p>
-								</div>
-							</div>
-							<div class="col-sm-4 w3_tab_img_left">
-								<div class="demo">
-									<a class="cm-overlay" href="images/g3.jpg">
-										<figure class="imghvr-shutter-in-out-diag-2"><img src="images/g3.jpg" alt=" " class="img-responsive">
-										</figure>
-									</a>
-								</div>
-								<div class="agile-gallery-info">
-									<h5>My project</h5>
-									<p>Pulvinar</p>
-								</div>
-							</div>
-							<div class="clearfix"> </div>
-						</div>
-					</div>
-					<div role="tabpanel" class="tab-pane fade" id="playing" aria-labelledby="playing-tab">
-						<div class="w3_tab_img">
-							<div class="col-sm-4 w3_tab_img_left">
-								<div class="demo">
-									<a class="cm-overlay" href="images/g4.jpg">
-										<figure class="imghvr-shutter-in-out-diag-2"><img src="images/g4.jpg" alt=" " class="img-responsive">
-										</figure>
-									</a>
-								</div>
-								<div class="agile-gallery-info">
-									<h5>My project</h5>
-									<p>Blandit</p>
-								</div>
-							</div>
-							<div class="col-sm-4 w3_tab_img_left">
-								<div class="demo">
-									<a class="cm-overlay" href="images/g1.jpg">
-										<figure class="imghvr-shutter-in-out-diag-2"><img src="images/g1.jpg" alt=" " class="img-responsive">
-										</figure>
-									</a>
-								</div>
-								<div class="agile-gallery-info">
-									<h5>My project</h5>
-									<p>Vivamus</p>
-								</div>
-							</div>
-							<div class="col-sm-4 w3_tab_img_left">
-								<div class="demo">
-									<a class="cm-overlay" href="images/g2.jpg">
-										<figure class="imghvr-shutter-in-out-diag-2"><img src="images/g3.jpg" alt=" " class="img-responsive">
-										</figure>
-									</a>
-								</div>
-								<div class="agile-gallery-info">
-									<h5>My project</h5>
-									<p>Eleifend</p>
-								</div>
-							</div>
-							<div class="col-sm-4 w3_tab_img_left">
-								<div class="demo">
-									<a class="cm-overlay" href="images/g3.jpg">
-										<figure class="imghvr-shutter-in-out-diag-2"><img src="images/g2.jpg" alt=" " class="img-responsive">
-										</figure>
-									</a>
-								</div>
-								<div class="agile-gallery-info">
-									<h5>My project</h5>
-									<p>Blandit</p>
-								</div>
-							</div>
-							<div class="clearfix"> </div>
-						</div>
-					</div>
-					<div role="tabpanel" class="tab-pane fade" id="painting" aria-labelledby="painting-tab">
-						<div class="w3_tab_img">
-							<div class="col-sm-3 w3_tab_img_left">
-								<div class="demo">
-									<a class="cm-overlay" href="images/g1.jpg">
-										<figure class="imghvr-shutter-in-out-diag-2"><img src="images/g1.jpg" alt=" " class="img-responsive">
-										</figure>
-									</a>
-								</div>
-								<div class="agile-gallery-info">
-									<h5>My project</h5>
-									<p>Ornare </p>
-								</div>
-							</div>
-							<div class="col-sm-3 w3_tab_img_left">
-								<div class="demo">
-									<a class="cm-overlay" href="images/g2.jpg">
-										<figure class="imghvr-shutter-in-out-diag-2"><img src="images/g2.jpg" alt=" " class="img-responsive">
-										</figure>
-									</a>
-								</div>
-								<div class="agile-gallery-info">
-									<h5>My project</h5>
-									<p>Pulvinar</p>
-								</div>
-							</div>
-							<div height="10px" class="col-sm-3 w3_tab_img_left">
-								<div class="demo">
-									<a class="cm-overlay" href="images/g3.jpg">
-										<figure class="imghvr-shutter-in-out-diag-2"><img src="images/g3.jpg" alt=" " class="img-responsive">
-										</figure>
-									</a>
-								</div>
-								<div class="agile-gallery-info">
-									<h5>My project</h5>
-									<p>Vulputate</p>
-								</div>
-							</div>
-							<div class="clearfix"> </div>
-						</div>
-					</div>
-				</div>
+                <img height="40px" style="padding-left:2em" src="images/logos/git.png" alt="alt text" title="Git">
+                <img height="70px"  style="padding-left:2em" src="images/logos/github.png" alt="alt text" title="Github">
+                <img height="70px"  style="padding-left:2em" src="images/logos/tfs.png" alt="alt text" title="TFS">
+                <img height="70px"  style="padding-left:2em" src="images/logos/svn.png" alt="alt text" title="SVN">
+
+                </p>
+
+                <br>
+
+                <div class="agile-gallery-info">
+                <h5 class="agileits-title">IDE</h5>
+
+                </div>
+
+                <p>
+
+
+                <img height="70px" style="padding-left:2em" src="images/logos/vs.png" alt="alt text" title="Visual Studio">
+                <img height="70px"  style="padding-left:2em" src="images/logos/vscode.jpg" alt="alt text" title="Visual Studio Code">
+                <img height="70px"  style="padding-left:2em" src="images/logos/st.jpg" alt="alt text" title="Sublime Text">
+                <img height="70px"  style="padding-left:2em" src="images/logos/pycharm.png" alt="alt text" title="Pycharm">
+                <img height="50px"  style="padding-left:2em" src="images/logos/eclipse.png" alt="alt text" title="Eclipse">
+
+                </p>
+
+                <br>
+
+                <div class="agile-gallery-info">
+                <h5 class="agileits-title">Database</h5>
+
+                </div>
+
+                <p>
+
+
+                <img height="60px" style="padding-left:2em" src="images/logos/sql.png" alt="alt text" title="SQL">
+                <img height="70px"  style="padding-left:2em" src="images/logos/firebase.png" alt="alt text" title="Firebase">
+
+                </p>
+
+                <br>
+
+
 			</div>
 		</div>
 		<script src="js/jquery.tools.min.js"></script>
