Fixed tiles for my work

--- a/index.html
+++ b/index.html
@@ -157,112 +157,96 @@ I am currently pursuing Master of Science in Robotics at Northwestern University
 			<div class="col-md-12 skills-left">
                 <h3  class="agileits-title">My Work</h3>
 
-                                        <div class="w3_tab_img">
+
+<div class="card-grid">
+  <div  class="card-wrap">
+    <a href="sdg.html">
+    <div  class="card">
+      <img src="images/tide.gif" class="card-img"/>
+        <div style="padding-top:1em;padding-bottom:1em" class="agile-gallery-info">
+            <h5>Synthetic Dataset generation for ML</h5>
+        </div>
+    </div>
+    </a>
+  </div>
+  <div  class="card-wrap">
+    <a href="hopper.html">
+    <div  class="card">
+      <img src="images/hopper.png" class="card-img"/>
+        <div style="padding-top:1em;padding-bottom:1em" class="agile-gallery-info">
+            <h5>Single legged hopping robot  </h5>
+
+        </div>
+    </div>
+    </a>
+  </div>
+  <div  class="card-wrap">
+    <a href="excavator.html">
+    <div  class="card">
+      <img src="images/caterpillar.png" class="card-img"/>
+        <div style="padding-top:1em;padding-bottom:1em" class="agile-gallery-info">
+            <h5>Excavator tooth detection</h5>
+        </div>
+    </div>
+    </a>
+  </div>
+
+  <div  class="card-wrap">
+    <a href="quad.html">
+    <div  class="card">
+      <img src="images/quad.png" class="card-img"/>
+        <div style="padding-top:1em;padding-bottom:1em" class="agile-gallery-info">
+            <h5>Autonomous Quadrotor design</h5>
+        </div>
+    </div>
+    </a>
+  </div>
+  <div  class="card-wrap">
+    <a href="baxter.html">
+    <div  class="card">
+      <img src="images/baxter.jpg" class="card-img"/>
+        <div style="padding-top:1em;padding-bottom:1em" class="agile-gallery-info">
+            <h5>Baxter Constrained motion</h5>
+        </div>
+    </div>
+    </a>
+  </div>
+  <div  class="card-wrap">
+    <a href="ml.html">
+    <div  class="card">
+      <img src="images/ml.png" class="card-img"/>
+        <div style="padding-top:1em;padding-bottom:1em" class="agile-gallery-info">
+            <h5>Tensorflow object detection</h5>
+        </div>
+    </div>
+    </a>
+  </div>
+  <div  class="card-wrap">
+    <a href="md.html">
+    <div  class="card">
+      <img src="images/md.png" class="card-img"/>
+        <div style="padding-top:1em;padding-bottom:1em" class="agile-gallery-info">
+            <h5>Machine Dynamics</h5>
+        </div>
+    </div>
+    </a>
+  </div>
+  <div  class="card-wrap">
+    <a href="rm.html">
+    <div  class="card">
+      <img src="images/kuka.png" class="card-img"/>
+        <div style="padding-top:1em;padding-bottom:1em" class="agile-gallery-info">
+            <h5>Robot Manipulation</h5>
+        </div>
+    </div>
+    </a>
+  </div>
+</div>
 
 
-                            <div class="col-sm-3 w3_tab_img_left">
-                                <div class="demo">
-                                    <a href="sdg.html">
-                                        <figure class="imghvr-shutter-in-out-diag-2"><img src="images/merge_output.gif" alt=" " class="img-responsive" />
-                                        </figure>
-                                    </a>
-                                </div>
-                                <div class="agile-gallery-info">
-                                    <h5>Synthetic Dataset generation for ML</h5>
-                                    <!-- <p>Consectetur</p> -->
-                                </div>
-                            </div>
-
-                            <div class="col-sm-3 w3_tab_img_left">
-                                <div class="demo">
-                                    <a href="hopper.html">
-                                        <figure class="imghvr-shutter-in-out-diag-2"><img src="images/hopper.png" alt=" " class="img-responsive" />
-                                        </figure>
-                                    </a>
-                                </div>
-                                <div class="agile-gallery-info">
-                                    <h5>Single legged hopping robot</h5>
-                                    <!-- <p>Consectetur</p> -->
-                                </div>
-                            </div>
-                            <div class="col-sm-3 w3_tab_img_left">
-                                <div class="demo">
-                                    <a href="excavator.html">
-                                        <figure class="imghvr-shutter-in-out-diag-2"><img src="images/caterpillar.png" alt=" " class="img-responsive" />
-                                        </figure>
-                                    </a>
-                                </div>
-                                <div class="agile-gallery-info">
-                                    <h5>Excavator tooth detection</h5>
-                                    <!-- <p>Consectetur</p> -->
-                                </div>
-                            </div>
-
-                            <div class="col-sm-3 w3_tab_img_left">
-                                <div class="demo">
-                                    <a href="quad.html">
-                                        <figure class="imghvr-shutter-in-out-diag-2"><img src="images/quad.png" alt=" " class="img-responsive" />
-                                        </figure>
-                                    </a>
-                                </div>
-                                <div class="agile-gallery-info">
-                                    <h5>Autonomous Quadrotor design</h5>
-                                    <!-- <p>Consectetur</p> -->
-                                </div>
-                            </div>
-                            <div class="col-sm-3 w3_tab_img_left">
-                                <div class="demo">
-                                    <a href="baxter.html">
-                                        <figure class="imghvr-shutter-in-out-diag-2"><img src="images/baxter.jpg" alt=" " class="img-responsive" />
-                                        </figure>
-                                    </a>
-                                </div>
-                                <div class="agile-gallery-info">
-                                    <h5>Baxter Constrained motion</h5>
-                                    <!-- <p>Adipiscing </p> -->
-                                </div>
-                            </div>
-                            <div class="col-sm-3 w3_tab_img_left">
-                                <div class="demo">
-                                    <a href="ml.html">
-                                        <figure ><img src="images/ml.png" alt=" " class="img-responsive" />
-                                        </figure>
-                                    </a>
-                                </div>
-                                <div class="agile-gallery-info">
-                                    <h5>Tensorflow object detection</h5>
-                                   <!--  <p>Ullamcorper </p> -->
-                                </div>
-                            </div>
-                            <div class="col-sm-3 w3_tab_img_left">
-                                <div class="demo">
-                                    <a href="md.html">
-                                        <figure class="imghvr-shutter-in-out-diag-2"><img src="images/md.png" alt=" " class="img-responsive" />
-                                        </figure>
-                                    </a>
-                                </div>
-                                <div class="agile-gallery-info">
-                                    <h5>Machine Dynamics</h5>
-                                   <!--  <p>Ullamcorper </p> -->
-                                </div>
-                            </div>
-                            <div class="col-sm-3 w3_tab_img_left">
-                                <div class="demo">
-                                    <a  href="rm.html">
-                                        <figure class="imghvr-shutter-in-out-diag-2"><img src="images/kuka.png" alt=" " class="img-responsive" />
-                                        </figure>
-                                    </a>
-                                </div>
-                                <div class="agile-gallery-info">
-                                    <h5>Robot Manipulation</h5>
-                                   <!--  <p>Ullamcorper </p> -->
-                                </div>
-                            </div>
-                            </div>
 
 
 			</div>
-			<div class="clearfix"></div>
 		</div>
 	</div>
 	<div class="w3ls-section agileits-gallery" id="gallery">
