--- a/sdg.html
+++ b/sdg.html
@@ -93,7 +93,8 @@ window.__cfRocketOptions = {byc:0,p:1521556077,petok:"15fa8aae2a91f9db8f1f3281dc
 	<!-- about -->
 	<div class="agile-about w3ls-section text-left" id="about">
 		<div class="container">
-			<h1><a id="Synthetic_dataset_generation_for_machine_learning_models_0"></a>Synthetic dataset generation for machine learning models</h1>
+                        <h3 class="agileits-title">Synthetic dataset generation for machine learning</h3>
+<!-- 			<h1><a id="Synthetic_dataset_generation_for_machine_learning_models_0"></a>Synthetic dataset generation for machine learning models</h1> -->
 <p>One of the most important problems that are faced by a machine learning, is the time and effort required for collection and preparation of training data. This package generates synthetic datasets for training object recognition models. A huge dataset of fake simulated images of any object scanned by a depth camera is generated, so that machine learning models could be trained on a variety of data to make them more robust. The project package performs following tasks</p>
 <ul>
 <li>Scan the object to collect point clouds of the object using RGBD camera from different angles.</li>
@@ -136,6 +137,8 @@ window.__cfRocketOptions = {byc:0,p:1521556077,petok:"15fa8aae2a91f9db8f1f3281dc
 <p>Gazebo give images with empty backgrounds, which is not a good dataset for training object recognition models. The bounding_n_background.py program performs the following tasks.</p>
 <ul>
 <li>Reads the output images from gazebo, crops out only the object of interest from the images using OpenCV, and paste the cropped objects to random images provided as input, so that the machine learning model will be more robust in recognising the object within a lot of other objects.Some example images are shown below</li>
+<br>
+<img src="images/bg_output.png" alt="alt text"></p>
 <li>This program also generate a .csv file which have all the data required for training the machine learning model like the bounding box of the object in the image (which is found using OpenCV), dimensions of the image and the label for the object (The name with which the trained model should identify the object)</li>
 </ul>
 <p>Now the generate_tfrecord.py program reads the .csv files and generates this data in tfrecord file format, which is the input type that is used for training tensorflow object recognition API.</p>
@@ -145,9 +148,11 @@ The graph showing the total loss with number of steps during the training proces
 <p><img src="images/tensorflow_total_loss.png" alt="alt text"></p>
 <h5><a id="Step_7_Live_detection_57"></a>Step 7: Live detection</h5>
 <p>The object_detection .py file opens a video recording for testing the Machine learning model after training. The training is not yet perfect, but still the model is detecting the object most of the time. This can be made more robust by training on a huge dataset generated using the package with more simulated conditions incorporated<br>
-<a href="https://www.youtube.com/watch?v=MT9juFf1RUI"><img src="https://img.youtube.com/vi/MT9juFf1RUI/0.jpg" alt="IMAGE ALT TEXT HERE"></a></p>
-
-
+<!-- <a href="https://www.youtube.com/watch?v=MT9juFf1RUI"><img src="https://img.youtube.com/vi/MT9juFf1RUI/0.jpg" alt="IMAGE ALT TEXT HERE"></a></p>
+ -->
+<div class="video-responsive">
+    <iframe width="420" height="315" src="http://www.youtube.com/embed/MT9juFf1RUI" frameborder="0" allowfullscreen></iframe>
+</div>
 			<a href="index.html" class="wthree- about-link scroll text-center">Back</a>
 		</div>
 	</div>
