--- a/sdg.html
+++ b/sdg.html
@@ -161,7 +161,7 @@ The graph showing the total loss with number of steps during the training proces
 <!-- <a href="https://www.youtube.com/watch?v=MT9juFf1RUI"><img src="https://img.youtube.com/vi/MT9juFf1RUI/0.jpg" alt="IMAGE ALT TEXT HERE"></a></p>
  -->
 <div class="video-responsive">
-    <iframe width="420" height="315" src="https://www.youtube.com/embed/MT9juFf1RUI" frameborder="0" allowfullscreen></iframe>
+    <iframe width="420" height="315" src="https://www.youtube.com/embed/w1X17ET0MNY" frameborder="0" allowfullscreen></iframe>
 </div>
 			<a href="index.html" class="wthree- about-link scroll text-center">Back</a>
 		</div>
