Added Demo video

--- a/sdg.html
+++ b/sdg.html
@@ -95,7 +95,10 @@ window.__cfRocketOptions = {byc:0,p:1521556077,petok:"15fa8aae2a91f9db8f1f3281dc
 		<div class="container">
                         <h3 class="agileits-title">Synthetic dataset generation for machine learning</h3>
 <!-- 			<h1><a id="Synthetic_dataset_generation_for_machine_learning_models_0"></a>Synthetic dataset generation for machine learning models</h1> -->
-<p>One of the most important problems that are faced by a machine learning, is the time and effort required for collection and preparation of training data. This package generates synthetic datasets for training object recognition models. A huge dataset of fake simulated images of any object scanned by a depth camera is generated, so that machine learning models could be trained on a variety of data to make them more robust. The project package performs following tasks</p>
+<div class="video-responsive">
+    <iframe width="420" height="315" src="https://www.youtube.com/embed/wTG6hmNOVkA" frameborder="0" allowfullscreen></iframe>
+</div>
+			<p>One of the most important problems that are faced by a machine learning, is the time and effort required for collection and preparation of training data. This package generates synthetic datasets for training object recognition models. A huge dataset of fake simulated images of any object scanned by a depth camera is generated, so that machine learning models could be trained on a variety of data to make them more robust. The project package performs following tasks</p>
 <ul>
 <li>Scan the object to collect point clouds of the object using RGBD camera from different angles.</li>
 <li>Stitch the point clouds together to create a 3D point cloud of the object scanned.</li>
