Replaced about.html with index.html

--- a/experience.html
+++ b/experience.html
@@ -23,7 +23,7 @@
 			<div class="logo">Suhail<span>.</span>CV</div>
 			<div class="main_nav d-flex flex-row align-items-end justify-content-start">
 				<ul class="d-flex flex-row align-items-center justify-content-start">
-					<li><a href="about.html">About</a></li>
+					<li><a href="index.html">About</a></li>
 					<li><a href="skills.html">Skills</a></li>
 					<!-- <li><a href="services.html">Services</a></li> -->
 					<li class="active"><a href="experience.html">Experience</a></li>
@@ -43,7 +43,7 @@
 			<div class="hamburger ml-auto">menu</div>
 			<div class="menu_nav text-right">
 				<ul>
-					<li><a href="about.html">About</a></li>
+					<li><a href="index.html">About</a></li>
 					<li><a href="skills.html">Skills</a></li>
 					<li><a href="services.html">Services</a></li>
 					<li><a href="experience.html">Experience</a></li>
@@ -74,7 +74,16 @@
 				</div>
 				<div class="general_info_content">
 					<div class="general_info_content_inner mCustomScrollbar" data-mcs-theme="minimal-dark">
-						<div class="general_info_title">General Information</div>
+									<div class="social_container">
+							<ul class="d-flex flex-row align-items-start justify-content-start">
+								<li><a href="https://www.linkedin.com/in/suhailpallathsulaiman/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+								<li><a href="https://github.com/suhailpallathsulaiman"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+								<li><a href="https://www.youtube.com/user/zulusvideo"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
+								<li><a href="https://www.instagram.com/suhail_bin_sulaiman/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+								<li><a href="https://www.facebook.com/suhail.p.sulaiman"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+
+							</ul>
+						</div>
 						<ul class="general_info_list">
 							<li class="d-flex flex-row align-items-center justify-content-start">
 								<div class="general_info_icon d-flex flex-column align-items-start justify-content-center"><img src="images/icon_1.png" alt=""></div>
@@ -101,15 +110,7 @@
 
 						</ul>
 
-						<!-- Social -->
-						<div class="social_container">
-							<ul class="d-flex flex-row align-items-start justify-content-start">
-								<li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-							</ul>
-						</div>
+
 					</div>
 				</div>
 			</div>
