Fixing index.html issue

--- a/education.html
+++ b/education.html
@@ -23,7 +23,7 @@
 			<div class="logo">Suhail<span>.</span>CV</div>
 			<div class="main_nav d-flex flex-row align-items-end justify-content-start">
 				<ul class="d-flex flex-row align-items-center justify-content-start">
-					<li><a href="index.html">About</a></li>
+					<li><a href="">About</a></li>
 					<li><a href="skills.html">Skills</a></li>
 					<!-- <li><a href="services.html">Services</a></li> -->
 					<li><a href="experience.html">Experience</a></li>
@@ -43,7 +43,7 @@
 			<div class="hamburger ml-auto">menu</div>
 			<div class="menu_nav text-right">
 				<ul>
-					<li><a href="index.html">About</a></li>
+					<li><a href="">About</a></li>
 					<li><a href="skills.html">Skills</a></li>
 					<li><a href="services.html">Services</a></li>
 					<li><a href="experience.html">Experience</a></li>
@@ -67,8 +67,8 @@
 					<div class="general_info_image">
 						<div class="background_image" style="background-image:url(images/suhail.jpg)"></div>
 						<div class="header_button_2">
-							<a href="#">Resume</a>
-							<div class="d-flex flex-column align-items-center justify-content-center"><img src="images/download.png" alt=""></div>
+							<a href="https://suhailpallathsulaiman.github.io/Suhail_Pallath_Sulaiman_Resume.pdf">Resume</a>
+							<div href="https://suhailpallathsulaiman.github.io/Suhail_Pallath_Sulaiman_Resume.pdf" class="d-flex flex-column align-items-center justify-content-center"><img src="images/download.png" alt=""></div>
 						</div>
 					</div>
 				</div>
