--- a/education.html
+++ b/education.html
@@ -23,7 +23,7 @@
 			<div class="logo">Suhail<span>.</span>CV</div>
 			<div class="main_nav d-flex flex-row align-items-end justify-content-start">
 				<ul class="d-flex flex-row align-items-center justify-content-start">
-					<li><a href="">About</a></li>
+					<li><a href="https://suhailpallathsulaiman.github.io/">About</a></li>
 					<li><a href="skills.html">Skills</a></li>
 					<!-- <li><a href="services.html">Services</a></li> -->
 					<li><a href="experience.html">Experience</a></li>
@@ -43,7 +43,7 @@
 			<div class="hamburger ml-auto">menu</div>
 			<div class="menu_nav text-right">
 				<ul>
-					<li><a href="">About</a></li>
+					<li><a href="https://suhailpallathsulaiman.github.io/">About</a></li>
 					<li><a href="skills.html">Skills</a></li>
 					<li><a href="services.html">Services</a></li>
 					<li><a href="experience.html">Experience</a></li>
