--- a/education.html
+++ b/education.html
@@ -33,7 +33,7 @@
 		<!-- 			<li><a href="contact.html">Contact</a></li> -->
 				</ul>
 				<div class="header_button ml-auto">
-					<a href="#">Resume</a>
+					<a href="https://suhailpallathsulaiman.github.io/Suhail_Pallath_Sulaiman_Resume.pdf">Resume</a>
 					<div class="d-flex flex-column align-items-center justify-content-center"><img src="images/download.png" alt=""></div>
 				</div>
 			</div>
