--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
 					<!-- <li><a href="contact.html">Contact</a></li> -->
 				</ul>
 				<div class="header_button ml-auto">
-					<a href="#">Resume</a>
+					<a href="https://suhailpallathsulaiman.github.io/Suhail_Pallath_Sulaiman_Resume.pdf">Resume</a>
 					<div class="d-flex flex-column align-items-center justify-content-center"><img src="images/download.png" alt=""></div>
 				</div>
 			</div>
@@ -67,7 +67,7 @@
 					<div class="general_info_image">
 						<div class="background_image" style="background-image:url(images/suhail.jpg)"></div>
 						<div class="header_button_2">
-							<a href="#">Resume</a>
+							<a href="https://suhailpallathsulaiman.github.io/Suhail_Pallath_Sulaiman_Resume.pdf">Resume</a>
 							<div class="d-flex flex-column align-items-center justify-content-center"><img src="images/download.png" alt=""></div>
 						</div>
 					</div>
@@ -133,7 +133,7 @@
 							<div><div class="proj_image"><img src="images/stitching.gif" alt=""></div></div>
 							<div class="edu_content">
 								<div class="edu_title_container">
-									<div class="edu_title">Synthetic dataset generation for machine learning</div>
+									<div href"https://youtu.be/wTG6hmNOVkA" class="edu_title">Synthetic dataset generation for machine learning</div>
 
 								</div>
 								<div class="edu_text">
