remover error in sdg video link

--- a/portfolio.html
+++ b/portfolio.html
@@ -133,7 +133,7 @@
 							<div><div class="proj_image"><img src="images/stitching.gif" alt=""></div></div>
 							<div class="edu_content">
 								<div class="edu_title_container">
-									<div href"https://youtu.be/wTG6hmNOVkA" class="edu_title">Synthetic dataset generation for machine learning</div>
+									<div href="https://youtu.be/wTG6hmNOVkA" class="edu_title">Synthetic dataset generation for machine learning</div>
 
 								</div>
 								<div class="edu_text">
