--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Education</title>
+<title>Portfolio</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="vCard template project">
@@ -117,12 +117,13 @@
 			<!-- Main Content -->
 
 			<div class="main_content">
+
+				<div class="main_content_scroll mCustomScrollbar" data-mcs-theme="minimal-dark">
 				<div class="main_title_container d-flex flex-column align-items-start justify-content-end">
 
 					<div class="main_title">Recent Projects</div>
 				</div>
-				<div class="main_content_scroll mCustomScrollbar" data-mcs-theme="minimal-dark">
-
+				<br><br>
 					<!-- Education -->
 
 					<div class="education">
@@ -130,16 +131,17 @@
 						<!-- Education Item -->
 						<div class="edu_item d-flex flex-lg-row flex-column align-items-start justfy-content-start">
 
-							<div><div class="proj_image"><img src="images/stitching.gif" alt=""></div></div>
+
+							<div><a href="https://youtu.be/wTG6hmNOVkA"><div class="proj_image"><img src="images/stitching.gif" alt=""></div></div>
 							<div class="edu_content">
 								<div class="edu_title_container">
-									<div href="https://youtu.be/wTG6hmNOVkA" class="edu_title">Synthetic dataset generation for machine learning</div>
+									<div class="edu_title">Synthetic dataset generation for machine learning</div>
 
 								</div>
 								<div class="edu_text">
 									<p>The objective of this project is to generate fake datasets for training machine learning models. The object is scanned using a depth camera and a 3D model is generated. Then millions of fake images are generated using the 3D model and the images are added with a variety of backgrounds, to generate a variety of data to train robust detection and classification models.</p>
 								</div>
-								<div class="edu_subtitle">Skills used:<p>PCL, OpenCV, tensorflow, Open3D, Gazebo, C++, Python</p></div>
+								<div class="edu_subtitle">Skills used:<p>PCL, OpenCV, tensorflow, Open3D, Gazebo, C++, Python</p></div></a>
 							</div>
 						</div>
 
@@ -148,13 +150,14 @@
 
 
 							<div class="edu_content">
+								<a href="https://youtu.be/2aV62D1XlNc" >
 								<div class="edu_title_container">
 									<div class="edu_title">Autonomous Drone for Agriculture</div>
 
 								</div>
 								<div class="edu_text">
 									<p>This is a work in progress and is my final MS Robotics project which is to be completed by end of Fall 2018. The objective of this project is to develop an autonomous drone that can traverse through a field give GPS co-ordinates as bounding box. This involves visual odometry, sensor fusion, controls etc and RTK GPS is used to obtain centimeter level accuracy. The video demonstrates the final objective of the project.</p>
-								</div>
+								</div></a>
 							</div>
 							<div><div class="proj_image"><img src="images/parrot.gif" alt=""></div></div>
 						</div>
@@ -179,13 +182,14 @@
 
 
 							<div class="edu_content">
+								<a href="https://www.youtube.com/watch?v=p4vXwedmfDM" >
 								<div class="edu_title_container">
 									<div class="edu_title">Excavator tooth detection</div>
 
 								</div>
 								<div class="edu_text">
 									<p>This project is an attempt to train a custom model to detect and locate each tooth on a excavator bucket. Tensorflow machine learning library from Google was used to train the custom model along with OpenCV. The model was trained with just 100 images for this project, and so the accuracy of detection can be increased by increasing the number of training images and fine tuning the parameters between accuracy and speed. </p>
-								</div>
+								</div></a>
 							</div>
 							<div><div class="proj_image"><img src="images/excavator.gif" alt=""></div></div>
 						</div>
@@ -195,13 +199,14 @@
 
 							<div><div class="proj_image"><img src="images/baxter.gif" alt=""></div></div>
 							<div class="edu_content">
+								<a href="https://www.youtube.com/watch?v=v5kqGhG_XYQ">
 								<div class="edu_title_container">
 									<div class="edu_title">Baxter: Constrained motion</div>
 
 								</div>
 								<div class="edu_text">
 									<p>The objective of this project was to enable baxter to find a cup on the table using camera vision and IR Sensor, then handle the cup to the right hand of the person in front of him, which was sensed by applying skeleton tracking on pointcloud data from a depth camera .</p>
-								</div>
+								</div></a>
 							</div>
 						</div>
 
