addig sdg with link

--- a/portfolio.html
+++ b/portfolio.html
@@ -120,7 +120,6 @@
 
 				<div class="main_content_scroll mCustomScrollbar" data-mcs-theme="minimal-dark">
 				<div class="main_title_container d-flex flex-column align-items-start justify-content-end">
-
 					<div class="main_title">Recent Projects</div>
 				</div>
 				<br><br>
@@ -132,14 +131,12 @@
 						<div class="edu_item d-flex flex-lg-row flex-column align-items-start justfy-content-start">
 
 
-							<div><a href="https://youtu.be/wTG6hmNOVkA"><div class="proj_image"><img src="images/stitching.gif" alt=""></div></div>
+							<div><a href="https://suhailpallathsulaiman.github.io/sdg.html"><div class="proj_image"><img src="images/stitching.gif" alt=""></div></div>
 							<div class="edu_content">
 								<div class="edu_title_container">
-<<<<<<< HEAD
+
 									<div class="edu_title">Synthetic dataset generation for machine learning</div>
-=======
-									<div >Synthetic dataset generation for machine learning</div>
->>>>>>> e0ddcd7162405c513b11bbbf3323bdbae427094c
+
 
 								</div>
 								<div class="edu_text">
